--- a/EmployeePro/SajaProjectV2.csproj
+++ b/EmployeePro/SajaProjectV2.csproj
@@ -74,8 +74,18 @@
     <Compile Include="Factory\Database.cs" />
     <Compile Include="Factory\IRepository.cs" />
     <Compile Include="Factory\Repository.cs" />
+    <Compile Include="Model\CLS_Contract.cs" />
     <Compile Include="Model\CLS_Employee.cs" />
+    <Compile Include="Model\CLS_LaborDate.cs" />
+    <Compile Include="Model\CLS_LaborFallow.cs" />
+    <Compile Include="Model\CLS_MachineData.cs" />
+    <Compile Include="Model\CLS_MachineFallow.cs" />
+    <Compile Include="Model\CLS_MaterialData.cs" />
+    <Compile Include="Model\CLS_MaterialFallow.cs" />
+    <Compile Include="Model\CLS_ProjectInformation.cs" />
+    <Compile Include="Model\CLS_ProjectItemData.cs" />
     <Compile Include="Model\CLS_Wage.cs" />
+    <Compile Include="Model\CLS_WorkProgressFallow.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\DataForms\FRM_BasicProjectData.cs">
