--- a/EmployeePro/App.config
+++ b/EmployeePro/App.config
@@ -16,9 +16,9 @@
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
   <connectionStrings>
-    <add name="EmployeePro"
+    <add name="sagaDB"
      providerName="System.Data.SqlClient"
-     connectionString="Data Source=MSI-PC\SALES_DEV; Database=EmployeePro; Integrated Security = true;" />
+     connectionString="server=127.0.0.1;uid=root;pwd=''; Database=sagaDB;" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
