--- a/EmployeePro/App.config
+++ b/EmployeePro/App.config
@@ -16,9 +16,7 @@
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
   <connectionStrings>
-    <add 
-      name="sajaDB" connectionString="Server=127.0.0.1;Uid=root;pwd=;Database=sajadb;Port=3306;" 
-      providerName="MySql.Data.MySqlClient"/>
+    <add name="sajaDB" connectionString="Server=127.0.0.1;Uid=root;pwd=;Database=sajadb;Port=3306;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -32,6 +30,18 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IO.Pipelines" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.28.2.0" newVersion="3.28.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="ZstdSharp" publicKeyToken="8d151af33a4ad5cf" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.8.1.0" newVersion="0.8.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
