--- a/EmployeePro/App.config
+++ b/EmployeePro/App.config
@@ -13,11 +13,46 @@
       <setting name="RegisterBonusSkins" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="DefaultAppSkin" serializeAs="String">
+        <value>Skin/Money Twins</value>
+      </setting>
+      <setting name="DefaultPalette" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="TouchUI" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="CompactUI" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="TouchScaleFactor" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="DirectX" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="RegisterUserSkins" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="FontBehavior" serializeAs="String">
+        <value>UseSegoeUI</value>
+      </setting>
+      <setting name="DefaultAppFont" serializeAs="String">
+        <value></value>
+      </setting>
+      <setting name="CustomPaletteCollection" serializeAs="Xml">
+        <value />
+      </setting>
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
   <connectionStrings>
-    <add name="sajaDB" connectionString="Server=127.0.0.1;Uid=root;pwd=;Database=sajadb;Port=3306;" providerName="MySql.Data.MySqlClient" />
+    <add name="sajaDB" connectionString="Server=mysql.us.cloudlogin.co;Uid=mohalk_sajaddb;pwd=7LMss6Kq6=;Database=mohalk_sajaddb;Port=3306;charset=utf8mb4" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
+
+ 
+
+
+
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
