--- a/EmployeePro/SajaProjectV2.csproj
+++ b/EmployeePro/SajaProjectV2.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>SajaProjectV2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -22,10 +23,11 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
+    <AutorunEnabled>true</AutorunEnabled>
+    <ApplicationRevision>1</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
+    <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -46,6 +48,18 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestCertificateThumbprint>3ECF47BB0948D8AB375C3F4DF3C8125D52F4C6B5</ManifestCertificateThumbprint>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestKeyFile>SajaProjectV2_TemporaryKey.pfx</ManifestKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>true</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Cryptography, Version=2.0.0.0, Culture=neutral, PublicKeyToken=072edcf4a5328938, processorArchitecture=MSIL">
@@ -144,11 +158,14 @@
     <Compile Include="Controller\CmdMachineData.cs" />
     <Compile Include="Controller\CmdMachineFallow.cs" />
     <Compile Include="Controller\CmdMaterialData.cs" />
+    <Compile Include="Controller\CmdMaterialFallow.cs" />
     <Compile Include="Controller\CmdProjectInformation.cs" />
     <Compile Include="Controller\CmdProjectItemData.cs" />
     <Compile Include="Controller\CmdWage.cs" />
     <Compile Include="Controller\CmdWorkItem.cs" />
     <Compile Include="Controller\CmdWorkProgressFallow.cs" />
+    <Compile Include="Controller\Cmd_Totals.cs" />
+    <Compile Include="Controller\Cmd_Users.cs" />
     <Compile Include="Factory\Database.cs" />
     <Compile Include="Factory\IRepository.cs" />
     <Compile Include="Factory\Repository.cs" />
@@ -162,6 +179,9 @@
     <Compile Include="Model\CLS_MaterialFallow.cs" />
     <Compile Include="Model\CLS_ProjectInformation.cs" />
     <Compile Include="Model\CLS_ProjectItemData.cs" />
+    <Compile Include="Model\CLS_Totals.cs" />
+    <Compile Include="Model\CLS_UsereSession.cs" />
+    <Compile Include="Model\CLS_Users.cs" />
     <Compile Include="Model\CLS_Wage.cs" />
     <Compile Include="Model\CLS_WorkItem.cs" />
     <Compile Include="Model\CLS_WorkProgressFallow.cs" />
@@ -191,6 +211,12 @@
     <Compile Include="View\DataForms\FRM_LaborData.Designer.cs">
       <DependentUpon>FRM_LaborData.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\DataForms\FRM_Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\DataForms\FRM_Login.Designer.cs">
+      <DependentUpon>FRM_Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\DataForms\FRM_MachinesData.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -214,6 +240,18 @@
     </Compile>
     <Compile Include="View\DataForms\FRM_Show_All_Projects.Designer.cs">
       <DependentUpon>FRM_Show_All_Projects.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\DataForms\FRM_Users.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\DataForms\FRM_Users.Designer.cs">
+      <DependentUpon>FRM_Users.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\DataForms\FRM_WorkItem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\DataForms\FRM_WorkItem.Designer.cs">
+      <DependentUpon>FRM_WorkItem.cs</DependentUpon>
     </Compile>
     <Compile Include="View\FallowUP\FRM_CostMachinesFollow-up.cs">
       <SubType>Form</SubType>
@@ -251,6 +289,12 @@
     <Compile Include="View\FallowUP\FRM_WorkProgressData.Designer.cs">
       <DependentUpon>FRM_WorkProgressData.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\FallowUP\XtraForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FallowUP\XtraForm1.Designer.cs">
+      <DependentUpon>XtraForm1.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\FRM_EditWage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -270,6 +314,12 @@
       <DependentUpon>FRM_Statment.cs</DependentUpon>
     </Compile>
     <Compile Include="View\HelperClass.cs" />
+    <Compile Include="View\Reports\FRM_ProjectSpentCost.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Reports\FRM_ProjectSpentCost.Designer.cs">
+      <DependentUpon>FRM_ProjectSpentCost.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -293,6 +343,9 @@
     <EmbeddedResource Include="View\DataForms\FRM_LaborData.resx">
       <DependentUpon>FRM_LaborData.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\DataForms\FRM_Login.resx">
+      <DependentUpon>FRM_Login.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\DataForms\FRM_MachinesData.resx">
       <DependentUpon>FRM_MachinesData.cs</DependentUpon>
     </EmbeddedResource>
@@ -304,6 +357,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\DataForms\FRM_Show_All_Projects.resx">
       <DependentUpon>FRM_Show_All_Projects.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\DataForms\FRM_Users.resx">
+      <DependentUpon>FRM_Users.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\DataForms\FRM_WorkItem.resx">
+      <DependentUpon>FRM_WorkItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\FallowUP\FRM_CostMachinesFollow-up.resx">
       <DependentUpon>FRM_CostMachinesFollow-up.cs</DependentUpon>
@@ -323,6 +382,9 @@
     <EmbeddedResource Include="View\FallowUP\FRM_WorkProgressData.resx">
       <DependentUpon>FRM_WorkProgressData.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\FallowUP\XtraForm1.resx">
+      <DependentUpon>XtraForm1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\FRM_EditWage.resx">
       <DependentUpon>FRM_EditWage.cs</DependentUpon>
     </EmbeddedResource>
@@ -331,6 +393,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\FRM_Statment.resx">
       <DependentUpon>FRM_Statment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Reports\FRM_ProjectSpentCost.resx">
+      <DependentUpon>FRM_ProjectSpentCost.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="packages.config" />
@@ -346,6 +411,8 @@
     <None Include="Properties\DataSources\SajaProjectV2.Model.CLS_MaterialFallow.datasource" />
     <None Include="Properties\DataSources\SajaProjectV2.Model.CLS_ProjectInformation.datasource" />
     <None Include="Properties\DataSources\SajaProjectV2.Model.CLS_ProjectItemData.datasource" />
+    <None Include="Properties\DataSources\SajaProjectV2.Model.CLS_Users.datasource" />
+    <None Include="Properties\DataSources\SajaProjectV2.Model.CLS_WorkItem.datasource" />
     <None Include="Properties\DataSources\SajaProjectV2.Model.CLS_WorkProgressFallow.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -356,6 +423,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="SajaProjectV2_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
@@ -369,6 +437,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
